# devpro_django

./: README.md  pyproject.toml
.github/workflows/: backend.yml
pypro/: settings.py
