[tool.poetry]
name = "devpro-django"
version = "0.1.0"
description = "development of an application using Django, applying software development best practices"
authors = ["Sergio Scripnic <scripnic@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
